Code/frontEnd/syntax.output
State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC
   30       | LC error

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI
   44    | error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | PLUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 15 21 24 29 30 39 43 44
INT (258) 20 66
ID (259) 16 18 19 22 23 61 62 64 65
FLOAT (260) 67
TYPE (261) 11
STRUCT (262) 13 14 15
IF (263) 36 37
ELSE (264) 37
RETURN (265) 35
WHILE (266) 38
RELOP (267) 52
PLUS (268) 53 59
MINUS (269) 54 58
STAR (270) 55
DIV (271) 56
ASSIGNOP (272) 48 49
AND (273) 50
OR (274) 51
NOT (275) 60
SEMI (276) 4 5 7 8 33 35 39 42 43 44
COMMA (277) 10 25 46 68
LP (278) 22 23 36 37 38 57 61 62
RP (279) 22 23 24 36 37 38 57 61 62
LB (280) 20 63
RB (281) 20 21 63
LC (282) 13 15 28 30
RC (283) 13 15 28 29
DOT (284) 64
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 8 27 42 43
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 15
Tag (39)
    on left: 18, on right: 14
VarDec (40)
    on left: 19 20 21, on right: 9 10 20 27 47 48
FunDec (41)
    on left: 22 23 24, on right: 6
VarList (42)
    on left: 25 26, on right: 22 25
ParamDec (43)
    on left: 27, on right: 25 26
CompSt (44)
    on left: 28 29 30, on right: 6 34
StmtList (45)
    on left: 31 32, on right: 28 31
Stmt (46)
    on left: 33 34 35 36 37 38 39, on right: 31 36 37 38
DefList (47)
    on left: 40 41, on right: 13 28 40
Def (48)
    on left: 42 43 44, on right: 40
DecList (49)
    on left: 45 46, on right: 42 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67, on right: 33 35 36 37 38 48 49 50 51 52 53 54 55 56 57 58 59
    60 63 64 68 69
Args (52)
    on left: 68 69, on right: 61 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error . SEMI
   21 VarDec: error . RB
   24 FunDec: error . RP

    SEMI  shift, and go to state 22
    RP    shift, and go to state 23
    RB    shift, and go to state 24


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 24

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 19


State 28

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 43


State 29

   29 CompSt: error . RC

    RC  shift, and go to state 44


State 30

   28 CompSt: LC . DefList StmtList RC
   30       | LC . error

    error   shift, and go to state 45
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    PLUS    reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   15 StructSpecifier: STRUCT OptTag LC error . RC
   44 Def: error . SEMI

    SEMI  shift, and go to state 47
    RC    shift, and go to state 48


State 33

   42 Def: Specifier . DecList SEMI
   43    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 41

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 34

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 35

   40 DefList: Def . DefList

    error   shift, and go to state 54
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    PLUS    reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 35


State 36

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 37

   27 ParamDec: Specifier . VarDec

    error  shift, and go to state 40
    ID     shift, and go to state 41

    VarDec  go to state 56


State 38

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 39

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 26 (VarList)


State 40

   21 VarDec: error . RB

    RB  shift, and go to state 24


State 41

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 43

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 44

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 45

   30 CompSt: LC error .
   44 Def: error . SEMI

    SEMI  shift, and go to state 47

    $default  reduce using rule 30 (CompSt)


State 46

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 60
    INT     shift, and go to state 61
    ID      shift, and go to state 62
    FLOAT   shift, and go to state 63
    IF      shift, and go to state 64
    RETURN  shift, and go to state 65
    WHILE   shift, and go to state 66
    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 30

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 72
    Stmt      go to state 73
    Exp       go to state 74


State 47

   44 Def: error SEMI .

    $default  reduce using rule 44 (Def)


State 48

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 49

   21 VarDec: error . RB
   43 Def: Specifier error . SEMI

    SEMI  shift, and go to state 75
    RB    shift, and go to state 24


State 50

   20 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 76
    LB        shift, and go to state 28

    $default  reduce using rule 47 (Dec)


State 51

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 77


State 52

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 45 (DecList)


State 53

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 54

   44 Def: error . SEMI

    SEMI  shift, and go to state 47


State 55

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 56

   20 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 27 (ParamDec)


State 57

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 58

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 39


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   29 CompSt: error . RC
   39 Stmt: error . SEMI

    SEMI  shift, and go to state 80
    RC    shift, and go to state 44


State 61

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 62

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 65 (Exp)


State 63

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 64

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 65

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 83


State 66

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


State 67

   59 Exp: PLUS . Exp

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 85


State 68

   58 Exp: MINUS . Exp

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 86


State 69

   60 Exp: NOT . Exp

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 87


State 70

   57 Exp: LP . Exp RP

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 88


State 71

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 72

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 89


State 73

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    INT     shift, and go to state 61
    ID      shift, and go to state 62
    FLOAT   shift, and go to state 63
    IF      shift, and go to state 64
    RETURN  shift, and go to state 65
    WHILE   shift, and go to state 66
    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 30

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 90
    Stmt      go to state 73
    Exp       go to state 74


State 74

   33 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    SEMI      shift, and go to state 99
    LB        shift, and go to state 100
    DOT       shift, and go to state 101


State 75

   43 Def: Specifier error SEMI .

    $default  reduce using rule 43 (Def)


State 76

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 102


State 77

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 78

   46 DecList: Dec COMMA . DecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    VarDec   go to state 50
    DecList  go to state 103
    Dec      go to state 52


State 79

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 80

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 81

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70
    RP     shift, and go to state 104

    Exp   go to state 105
    Args  go to state 106


State 82

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 107


State 83

   35 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    SEMI      shift, and go to state 108
    LB        shift, and go to state 100
    DOT       shift, and go to state 101


State 84

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 61
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 109


State 85

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | PLUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    LB    shift, and go to state 100
    DOT   shift, and go to state 101

    $default  reduce using rule 59 (Exp)


State 86

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    LB    shift, and go to state 100
    DOT   shift, and go to state 101

    $default  reduce using rule 58 (Exp)


State 87

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    LB   shift, and go to state 100
    DOT  shift, and go to state 101

    $default  reduce using rule 60 (Exp)


State 88
